--- a/index.html
+++ b/index.html
@@ -16,18 +16,18 @@
 	<div class="wrapper">
 		<header>
 			<div class="header-wrapper">
-				<a href="" class="header-logo">
+				<a href="#" class="header-logo">
 					<img src="img/svg/logo.svg" alt="Логототип Mansio IT">
 				</a>
 				<nav>
-					<p class="services">Услуги</p>
-					<p class="projects">Проекты</p>
-					<p class="qanda">Q&A</p>
-					<p class="contacts">Контакты</p>
+					<a href="#" class="services">Услуги</a>
+					<a href="#" class="projects">Проекты</a>
+					<a href="#" class="qanda">Q&A</a>
+					<a href="#" class="contacts">Контакты</a>
 				</nav>
 				<div class="phone">
-					<div class="phone-number">8 (495) 777 77-77</div>
-					<a href="tel:+74957777777" class="phone-callback">Перезвоните мне</a>
+					<a class="phone-number" href="tel:+74957777777">8 (495) 777 77-77</a>
+					<button class="phone-callback blue-button">Перезвоните мне</button>
 				</div>
 			</div>
 		</header>
@@ -35,7 +35,7 @@
 			<div class="container">
 				<p><a href="#" data-modal="success">Модалка для вай-фай радара</a></p>
 			</div>
-			<div class="main-wrapper">
+			<section class="main-wrapper">
 				<div class="click-cost">
 					<div class="click-cost-content">
 						<h1>Стоимость клика <span>растет,</span> количество лидов падает?</h1>
@@ -55,14 +55,15 @@
 							data-srcset="img/placeholders/dummy-image-295x222.gif" media="(min-width: 740px)">
 						<source srcset="img/main-shop-768.jpg 1x, img/main-shop-768_2x.jpg 2x"
 							media="(min-width: 740px)">
-						<source srcset="img/webp/main-shop-360.webp 1x, img/webp/main-shop-360_2x.webp 2x">
+						<source srcset="img/webp/main-shop-360.webp 1x, img/webp/main-shop-360_2x.webp 2x"
+							media="(max-width:739px)">
 						<img class="lazyload" src="img/main-shop-360.jpg"
 							data-src="img/placeholders/dummy-image-4x3.gif" srcset="img/main-shop-360_2x.jpg 2x"
 							alt="Главное изображение сайта">
 					</picture>
 				</div>
-			</div>
-			<div class="trades-with-radars">
+			</section>
+			<section class="trades-with-radars">
 				<h2>Увеличивайте продажи с <span>Wi-Fi радаром</span></h2>
 				<div class="trades-points">
 					<div class="trades-point"><img src="img/svg/save-money.svg" alt="Иконка к тексту">
@@ -84,45 +85,43 @@
 						<p>Показывайте рекламу там, где уже есть клиенты</p>
 					</div>
 				</div>
-			</div>
-			<div class="what-is-it-radar">
+			</section>
+			<section class="what-is-it-radar">
 				<h2>Что такое <span>Wi-Fi радар</span></h2>
-				<div class="radar-advantages advantages">
-					<div class="first-advantage advantage">
-						<img src="img/svg/target.svg" alt="">
+				<ul class="radar-advantages advantages">
+					<li class="first-advantage advantage">
 						<div class="advantage-discription">
 							<h3>Возможность показа целевой рекламы</h3>
 							<p>Будете понимать предпочтения аудитории и не сжигать бюджеты на стрельбу «из пушки по
 								воробьям».</p>
 						</div>
-					</div>
-					<div class="second-advantage advantage">
-						<img class="second-advantage-img" src="img/svg/digital-marketing.svg" alt="">
+					</li>
+					<li class="second-advantage advantage">
 						<div class="advantage-discription">
 							<h3>Потенциальных клиентов</h3>
 							<p>Проходящие мимо люди увидят в интернете вашу рекламу. У вас появятся контакты, с которыми
 								можно работать «здесь и сейчас».</p>
 						</div>
-					</div>
-					<div class="third-advantage advantage">
-						<img src="img/svg/rating.svg" alt="">
+					</li>
+					<li class="third-advantage advantage">
 						<div class="advantage-discription">
 							<h3>Целевую аудиторию</h3>
 							<p>Wi-Fi радар определяет критерии, благодаря которым корректно сегментирует аудиторию.</p>
 						</div>
-					</div>
-				</div>
+					</li>
+				</ul>
 				<picture>
 					<source srcset="img/wifi-radar-what.jpg 1x, img/wifi-radar-what_2x.jpg 2x"
 						media="(min-width: 1300px)">
 					<source srcset="img/webp/wifi-radar-what.webp 1x, img/webp/wifi-radar-what_2x.webp 2x"
 						media="(min-width: 1300px)">
-					<source srcset="img/webp/wifi-radar-768.webp 1x, img/webp/wifi-radar-768_2x.webp 2x">
-					<img class="lazyload" data-src="img/placeholders/dummy-image-354x175.gif"
+					<source srcset="img/webp/wifi-radar-768.webp 1x, img/webp/wifi-radar-768_2x.webp 2x"
+						media="(max-width:1299px)">
+					<img class=" lazyload" data-src="img/placeholders/dummy-image-354x175.gif"
 						src="img/wifi-radar-768.jpg" srcset="img/wifi-radar-768_2x.jpg 2x" alt="Wi-Fi радар">
 				</picture>
-			</div>
-			<div class="four-questions">
+			</section>
+			<section class="four-questions">
 				<h2>4 вопроса после которых Вы <span>поймете</span> нужны ли Wi-Fi радары для Вашего бизнеса</h2>
 				<div class="question-wrapper">
 					<div class="question-results">
@@ -150,10 +149,11 @@
 
 					</div>
 				</div>
-			</div>
-			<div class="using-radars">
+			</section>
+			<section class="using-radars">
 				<picture>
-					<source srcset="img/webp/coffee-machine.webp 1x, img/webp/coffee-machine_2x.webp 2x">
+					<source srcset="img/webp/coffee-machine.webp 1x, img/webp/coffee-machine_2x.webp 2x"
+						media="(min-width:0)">
 					<img class="lazyload" data-src="img/placeholders/dummy-image-486x561.gif"
 						src="img/coffee-machine.jpg" srcset="img/coffee-machine_2x.jpg 2x" alt="Кофе-машина">
 				</picture>
@@ -182,8 +182,8 @@
 							кейсе</button>
 					</div>
 				</div>
-			</div>
-			<div class="how-it-works">
+			</section>
+			<section class="how-it-works">
 				<img class="img-navigation" src="img/svg/navigation.svg" alt="">
 				<div class="how-it-works-cont">
 					<h2>Как это работает</h2>
@@ -194,14 +194,14 @@
 						аудиторию</button>
 				</div>
 				<picture>
-					<source srcset="img/webp/statistic.webp 1x, img/webp/statistic_2x.webp 2x">
-					<img class="lazyload" class="img-statistic" data-src="img/placeholders/dummy-image-105x68.gif"
+					<source srcset="img/webp/statistic.webp 1x, img/webp/statistic_2x.webp 2x" media="(min-width:0)">
+					<img class="lazyload img-statistic" data-src="img/placeholders/dummy-image-105x68.gif"
 						src="img/statistic.jpg" srcset="img/statistic_2x.jpg 2x" alt="Статистика">
 				</picture>
-			</div>
-			<div class="ideal-audience">
+			</section>
+			<section class="ideal-audience">
 				<picture>
-					<source srcset="img/webp/laptop.webp 1x, img/webp/laptop_2x.webp 2x">
+					<source srcset="img/webp/laptop.webp 1x, img/webp/laptop_2x.webp 2x" media="(min-width:0)">
 					<img class="lazyload" data-src="img/placeholders/dummy-image-725x431.gif" src="img/laptop.jpg"
 						srcset="img/laptop_2x.jpg 2x" alt="Ноутбук с изображением сайта">
 				</picture>
@@ -232,8 +232,8 @@
 					</ul>
 					<button class="audience-button blue-button">Посмотреть демо версию</button>
 				</div>
-			</div>
-			<div class="need-audience">
+			</section>
+			<section class="need-audience">
 				<div class="why-i-need">
 					<h2>Зачем мне нужна аудитория?</h2>
 					<p class="answer-why">Чтобы запустить классную рекламу!</p>
@@ -269,8 +269,8 @@
 						</div>
 					</div>
 				</div>
-			</div>
-			<div class="form-for-gifts">
+			</section>
+			<section class="form-for-gifts">
 				<div class="gifts">
 					<h2>Оставьте заявку на аренду Wi-Fi радара сейчас и получите подарок на выбор:</h2>
 					<div class="advantages">
@@ -304,7 +304,7 @@
 								<input class="checkbox-input visually-hidden" type="checkbox">
 								<span class="checkbox-use"></span>
 							</label>
-							<p>Я согласен с <a>обработкой
+							<p>Я согласен с <a href="#">обработкой
 									персональных
 									данных</a></p>
 						</div>
@@ -317,22 +317,23 @@
 						<img src="img/svg/vk-orb.svg" alt="">
 					</div>
 				</div>
-			</div>
-			<div class="partners">
+			</section>
+			<section class="partners">
 				<h2>Нам <span>доверяют</span></h2>
 				<img class="bk" src="img/svg/bk.svg" alt="">
 				<img class="kfc" src="img/svg/kfc.svg" alt="">
 				<img class="handm" src="img/svg/handm.svg" alt="">
 				<img class="cofix" src="img/svg/cofix.svg" alt="">
 				<img class="healthplanet" src="img/svg/healthplanet.svg" alt="">
-			</div>
-			<div class="how-can-be">
+			</section>
+			<section class="how-can-be">
 				<h2>Какие бывают Wi-Fi радары</h2>
 				<div class="slider">
 					<div class="slide">
 						<img class="slide-img" src="img/svg/slide2.svg" alt="">
 						<picture>
-							<source srcset="img/webp/wifi-zone.webp 1x, img/webp/wifi-zone_2x.webp 2x">
+							<source srcset="img/webp/wifi-zone.webp 1x, img/webp/wifi-zone_2x.webp 2x"
+								media="(min-width:0)">
 							<img class="content-img lazyload" data-src="img/placeholders/dummy-image-205x163.gif"
 								src="img/wifi-zone.jpg" srcset="img/wifi-zone_2x.jpg 2x" alt="Устройство для Wi-Fi зон">
 						</picture>
@@ -347,7 +348,8 @@
 					<div class="slide">
 						<img class="slide-img" src="img/svg/slide1.svg" alt="">
 						<picture>
-							<source srcset="img/webp/sms-radar.webp 1x, img/webp/sms-radar_2x.webp 2x">
+							<source srcset="img/webp/sms-radar.webp 1x, img/webp/sms-radar_2x.webp 2x"
+								media="(min-width:0)">
 							<img class="content-img lazyload" data-src="img/placeholders/dummy-image-205x163.gif"
 								src="img/sms-radar.jpg" srcset="img/sms-radar_2x.jpg 2x" alt="СМС-радар">
 						</picture>
@@ -362,7 +364,8 @@
 					<div class="slide">
 						<img class="slide-img" src="img/svg/slide3.svg" alt="">
 						<picture>
-							<source srcset="img/webp/wifi-radar.webp 1x, img/webp/wifi-radar_2x.webp 2x">
+							<source srcset="img/webp/wifi-radar.webp 1x, img/webp/wifi-radar_2x.webp 2x"
+								media="(min-width:0)">
 							<img class="content-img lazyload" data-src="img/placeholders/dummy-image-205x163.gif"
 								src="img/wifi-radar.jpg" srcset="img/wifi-radar_2x.jpg 2x" alt="Wi-Fi радар">
 						</picture>
@@ -375,8 +378,8 @@
 						<p class="more-detail">Подробнее</p>
 					</div>
 				</div>
-			</div>
-			<div class="rates">
+			</section>
+			<section class="rates">
 				<h2>Что-то тут <span>будет</span> написано в две строки</h2>
 				<div class="rate-text">
 					<p>Наши цены зависят от многих факторов, узнайте цены для вашего бизнеса ляляля</p>
@@ -411,8 +414,8 @@
 						<span class="blue-span">+ 1 месяц в подарок</span>
 					</p>
 				</div>
-			</div>
-			<div class="rent-for-business">
+			</section>
+			<section class="rent-for-business">
 				<h2>Арендуйте Wi-Fi радар для вашего бизнеса!</h2>
 				<div class="rent-form">
 					<form action="#">
@@ -425,7 +428,7 @@
 								<input class="checkbox-input visually-hidden" type="checkbox">
 								<span class="checkbox-use"></span>
 							</label>
-							<p>Я согласен с <a>обработкой
+							<p>Я согласен с <a href="#">обработкой
 									персональных
 									данных</a></p>
 						</div>
@@ -438,19 +441,19 @@
 						<img src="img/svg/vk-orb.svg" alt="">
 					</div>
 				</div>
-			</div>
+			</section>
 		</main>
 		<footer>
 			<div class="footer-wrapper">
 				<div class="presentation">
 					<p>Презентация о компании</p>
 					<button class="presentation-button blue-button">Открыть онлайн</button>
-					<a href="" download="">Скачать</a>
+					<a href="#" download="">Скачать</a>
 				</div>
 				<img src="img/svg/logo.svg" alt="" class="footer-logo">
 				<div class="footer-callback">
-					<div class="footer-phone-number">8 (495) 777 77-77</div>
-					<a href="tel:+74957777777" class="phone-callback">Перезвоните мне</a>
+					<a href="tel:+74957777777" class="footer-phone-number">8 (495) 777 77-77</a>
+					<button class="phone-callback blue-button">Перезвоните мне</button>
 				</div>
 			</div>
 		</footer>
@@ -459,11 +462,11 @@
 				<div class="modal__overlay"></div>
 				<div class="modal__content">
 					<picture class="modal-case-img">
-						<source
-							srcset="img/webp/coffee-machine-modal.webp 1x, img/webp/coffee-machine-modal_2x.webp 2x">
+						<source srcset="img/webp/coffee-machine-modal.webp 1x, img/webp/coffee-machine-modal_2x.webp 2x"
+							media="(min-width:0)">
 						<img class="lazyload" data-src="img/placeholders/dummy-image-491x662.gif"
-							src="img/coffee-machine-modal.jpg" srcset="img/coffee-machine-modal_2x.jpg 2x" width="644px"
-							height="662px" alt="Кофе-машина">
+							src="img/coffee-machine-modal.jpg" srcset="img/coffee-machine-modal_2x.jpg 2x"
+							alt="Кофе-машина">
 					</picture>
 					<div class="modal-case-text">
 						<p class="card-title">Coffe House</p>
@@ -511,10 +514,11 @@
 				<div class="modal__overlay"></div>
 				<div class="modal__content">
 					<picture class="modal-wi-fi-zone-img">
-						<source srcset="img/webp/wifi-zone-modal.webp 1x, img/webp/wifi-zone-modal_2x.webp 2x">
+						<source srcset="img/webp/wifi-zone-modal.webp 1x, img/webp/wifi-zone-modal_2x.webp 2x"
+							media="(min-width:0)">
 						<img class="lazyload" data-src="img/placeholders/dummy-image-300x331.gif"
-							src="img/wifi-zone-modal.jpg" srcset="img/wifi-zone-modal_2x.jpg 2x" width="644px"
-							height="662px" alt="Устройство для Wi-Fi зон">
+							src="img/wifi-zone-modal.jpg" srcset="img/wifi-zone-modal_2x.jpg 2x"
+							alt="Устройство для Wi-Fi зон">
 					</picture>
 					<div class="modal-wi-fi-zone-text">
 						<h2>Wi-Fi Зоны</h2>
